2006-01-12  Karsten Dambekalns  <karsten@typo3.org>

	* Fixed unclean document.location use in JavaScript parts, replaced by [window.]location.href

2006-01-12  Wolfgang Klinger  <wk@plan2.net>

	* Introduced a new property 'ignore' for config.sys_language_mode

2006-01-12  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Changes to the htmlArea RTE extension (details see local ChangeLog)

2006-01-11  Dmitry Dulepov <typo3@accio.lv>

	* Fixed bug #2199: Summary contains duplicate labels (indexed_search)

2006-01-10  Wolfgang Klinger  <wolfgang@stufenlos.net>

	* Fixed bug #1209: set 'deleteTree' to '1' if 'recursiveDelete' is set in the user preferences

2006-01-08  Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* rtehtmlarea: Correction to path settings affecting image drag & drop and file/image upload.

2006-01-08  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #1938: Selection "Frontend" gets lost on login failure
	* Fixed bug #1149: FE-Editing in new Popups => Page doesnt reload
	* New feature #1910: Sorting in filelists by modification date

2006-01-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Converted locallang files of htmlArea RTE extension to xml format.
	* Revised all licence notices on all scripts of htmlArea RTE in order to publish under GPL.

2005-01-06  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #1854: wrong Access check in RTE Wizard
	* Added PHPdoc comments to the update wizard

2006-01-05  Karsten Dambekalns  <karsten@typo3.org>

	* Minor change to the stylesheet to enhance tabmenu display in the BE.

2005-01-05  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Add escapeStrForLike() to t3lib_db and use it in tslib_cObj->searchWhere()
	* Update for bug #1354: Use mysql_escape_string() with PHP 4.1.x

2006-01-04  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Changes to the htmlArea RTE extension (details see local ChangeLog)
